@@ -19,6 +19,7 @@
 	nekoml : added Sys.is_directory, Sys.read_directory and Regexp.split
 	nekoml : don't allow empty match
 	vm : create pthreads in detached mode (prevent leak on osx/linux)
+	std : added math_fceil,math_ffloor,math_fround,math_int,process_kill
 
 2008-09-23 : 1.8.0
 	added mod_tora (neko application server)
